# New-Portfolio

client/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/src/: App.tsx
client/src/components/: Button.tsx  GridBase.tsx  MyHead.css  MyHead.tsx  PoppedTextBox.tsx
client/src/contexts/: TranscriptProvider.tsx
server/: Cargo.toml
server/public/: index.html
server/public/assets/: index-BCsG655x.js  index-DN9GyOkj.css
server/src/: main.rs
