[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
poem = { version = "3", features = ["embed"] }
poem-openapi = { version = "5", features = ["swagger-ui"]}
async-stream = "0.3.6"
futures-util = "0.3"
tracing-subscriber = "0.3.19"
rust-embed = "8.0"
